# spl-token-faucet

./: .gitignore  .npmignore  .prettierignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: package.yml
programs/faucet/: Cargo.toml
programs/spl-faucet/: Cargo.toml
programs/spl-faucet/src/: lib.rs
programs/spl-token-faucet/: Cargo.toml
programs/spl-token-faucet/src/: lib.rs
src/: index.ts
